tests/integration/lsp/text_document/snapshots/integration__lsp__text_document__did_change_configuration__invalid_configuration.snap
---
source: tests/integration/lsp/text_document/did_change_configuration.rs
assertion_line: 37
expression: message
---
The texlab configuration is invalid; using the default settings instead.
Details: regex parse error:
    \
    ^
error: incomplete escape sequence, reached end of pattern prematurely
